compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__arguments_list_for_type_which_requires_none_2.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "pub fn main() {\n  let a: Int() = todo\n}"
---
----- SOURCE CODE
pub fn main() {
  let a: Int() = todo
}

----- ERROR
error: Incorrect type constructor
  ┌─ /src/one/two.gleam:2:13
  │
2 │   let a: Int() = todo
  │             ^^ You can remove this

`Int` has no type arguments, but here it's given an arguments list.
